# weather_api

./: .env.example  .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
config/: settings.py
tests/services/: conftest.py
tests/weather/: conftest.py  test_views.py
tests/weather/services/: conftest.py  test_forecast.py  test_open_weather_map.py
weather/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
weather/migrations/: 0001_initial.py  0002_alter_forecastoverride_unique_together.py
weather/services/: forecast.py  open_weather_map.py  openweathermap_service.py
